feat: 升级 spring-ai v2